Squash UI Bugs

--- a/public/contact_assets/css/style.css
+++ b/public/contact_assets/css/style.css
@@ -1968,7 +1968,19 @@ footer{
   position: relative;
 }
 
+#contactform{
+  margin-top: 3.5rem;
+}
 
+.section-field{
+  margin: 2rem 0;
+}
+
+.textarea{
+  display: flex;
+  flex-direction: column;
+
+}
 
 #footer{
   position: absolute;
@@ -1989,5 +2001,14 @@ footer{
     width: 100%;
     bottom: unset;
     height: 100%;
+  }
+}
+
+@media(min-width:769px){
+  .section-field:first-child{
+    margin-top: 0;
+  }
+  #contactform{
+    margin-top: 0;
   }
 }
